src/App.css
.App {
  overflow: hidden;
  text-align: center;
  min-height: 100vh;
  background-color: #08aeea;
  background-image: linear-gradient(0deg, #08aeea 0%, #6ccc88 100%);
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.header h1 {
  margin: -20px;
  padding: 21px 0;
}

.GifDiv {
  display: flex;
  align-items: center;
  justify-content: center;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.WaitingRoom {
  text-align: center;
  min-height: 100vh;
  background-color: #08aeea;
  background-image: linear-gradient(0deg, #08aeea 0%, #6ccc88 100%);
}

.App-link {
  color: #61dafb;
}

.Mobile {
  min-height: 100vh;
  min-width: 100vw;
  overflow-x: hidden;
  overflow-y: hidden;
  background-color: #08aeea;
  background-image: linear-gradient(0deg, #08aeea 0%, #6ccc88 100%);
}

.DrawingScreen {
  min-height: 100vh;
  min-width: 100vw;
  overflow-x: hidden;
  overflow-y: hidden;
  position: relative;
  background-color: #08aeea;
  background-image: linear-gradient(0deg, #08aeea 0%, #6ccc88 100%);
}

.html {
  margin: 0;
}
.body {
  margin: 0px;
}

h1 {
  margin-top: 0;
}

.h3Vote {
  padding: 10px;
  overflow: hidden;
  text-align: center;
}

.header {
  margin-top: 7px;
}

.h1Mobile {
  padding: 75px;
  overflow: hidden;
  text-align: center;
  min-height: 100vh;
  background-color: #08aeea;
  background-image: linear-gradient(0deg, #08aeea 0%, #6ccc88 100%);
}

.Stopmoving {
  overflow: hidden;
  touch-action: none;
}

.Footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 60px;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.countdown-timer {
  position: absolute;
  width: 52px;
  height: 52px;
}

.countdown-timer__circle circle {
  stroke-dasharray: 151px;
  stroke-dashoffset: 151px;
  stroke-linecap: butt;
  stroke-width: 4px;
  stroke: #fd4f57;
  fill: none;
}

.countdown-timer__circle svg {
  width: 52px;
  height: 52px;
  transform: rotateZ(-90deg);
}

.countdown-timer__text {
  position: absolute;
  top: 17px;
  width: 52px;

  font-size: 50px;
  font-weight: 600;
  text-align: center;
}

@keyframes countdown-animation {
  from {
    stroke-dashoffset: 0px;
  }
  to {
    stroke-dashoffset: 151px;
  }
}

.ribbon {
  width: 147px;
  height: 150px;
  overflow: hidden;
  position: absolute;
}
.ribbon::before,
.ribbon::after {
  position: absolute;
  z-index: -1;
  content: '';
  display: block;
  border: 5px solid #2980b9;
}
.ribbon span {
  position: absolute;
  display: block;
  width: 225px;
  padding: 15px 0;
  background-color: #3498db;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
  color: #fff;
  font: 700 16px/1 'Lato', sans-serif;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
  text-transform: uppercase;
  text-align: center;
}

.ribbon-top-left {
  top: -10px;
  left: -10px;
}
.ribbon-top-left::before,
.ribbon-top-left::after {
  border-top-color: transparent;
  border-left-color: transparent;
}
.ribbon-top-left::before {
  top: 0;
  right: 0;
}
.ribbon-top-left::after {
  bottom: 0;
  left: 0;
}
.ribbon-top-left span {
  right: -25px;
  top: 30px;
  transform: rotate(-45deg);
}

